# llama2.c

./: CMakeLists.txt  help_sycl.txt  run.c  run_sycl.cpp
